--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -14,7 +14,12 @@
     "skipLibCheck": true,
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
-    "paths": {}
+    "paths": {
+      "@component-first/router": ["libs/router/src/index.ts"],
+      "@component-first/util-standalone-shim": [
+        "libs/util-standalone-shim/src/index.ts"
+      ]
+    }
   },
   "exclude": ["node_modules", "tmp"]
 }
