--- a/apps/example-app/tsconfig.json
+++ b/apps/example-app/tsconfig.json
@@ -4,10 +4,13 @@
   "include": [],
   "references": [
     {
-      "path": "./tsconfig.lib.json"
+      "path": "./tsconfig.app.json"
     },
     {
       "path": "./tsconfig.spec.json"
+    },
+    {
+      "path": "./tsconfig.editor.json"
     }
   ]
 }
