add nested routing

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -15,6 +15,9 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
+      "@component-first/example-app/product": [
+        "libs/example-app/product/src/index.ts"
+      ],
       "@component-first/router": ["libs/router/src/index.ts"],
       "@component-first/util-standalone-shim": [
         "libs/util-standalone-shim/src/index.ts"
