--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@angular/router": "~13.1.0",
     "@nrwl/angular": "^13.4.1",
     "rxjs": "~7.4.0",
+    "todomvc-app-css": "2.4.1",
+    "todomvc-common": "1.0.5",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.4"
   },
