--- a/package.json
+++ b/package.json
@@ -10,15 +10,15 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~13.1.0",
-    "@angular/common": "~13.1.0",
-    "@angular/compiler": "~13.1.0",
-    "@angular/core": "~13.1.0",
-    "@angular/forms": "~13.1.0",
-    "@angular/platform-browser": "~13.1.0",
-    "@angular/platform-browser-dynamic": "~13.1.0",
-    "@angular/router": "~13.1.0",
-    "@nrwl/angular": "^13.4.1",
+    "@angular/animations": "13.2.0",
+    "@angular/common": "13.2.0",
+    "@angular/compiler": "13.2.0",
+    "@angular/core": "13.2.0",
+    "@angular/forms": "13.2.0",
+    "@angular/platform-browser": "13.2.0",
+    "@angular/platform-browser-dynamic": "13.2.0",
+    "@angular/router": "13.2.0",
+    "@nrwl/angular": "13.7.1",
     "rxjs": "~7.4.0",
     "todomvc-app-css": "2.4.1",
     "todomvc-common": "1.0.5",
@@ -26,39 +26,40 @@
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~13.1.0",
+    "@angular-devkit/build-angular": "13.2.1",
     "@angular-eslint/eslint-plugin": "~13.0.1",
     "@angular-eslint/eslint-plugin-template": "~13.0.1",
     "@angular-eslint/template-parser": "~13.0.1",
-    "@angular/cli": "~13.1.0",
-    "@angular/compiler-cli": "~13.1.0",
-    "@angular/language-service": "~13.1.0",
-    "@nrwl/cli": "13.4.1",
-    "@nrwl/cypress": "13.4.1",
-    "@nrwl/eslint-plugin-nx": "13.4.1",
-    "@nrwl/jest": "13.4.1",
-    "@nrwl/js": "^13.4.1",
-    "@nrwl/linter": "13.4.1",
-    "@nrwl/nx-cloud": "latest",
-    "@nrwl/tao": "13.4.1",
-    "@nrwl/workspace": "13.4.1",
+    "@angular/cli": "13.2.1",
+    "@angular/compiler-cli": "13.2.0",
+    "@angular/language-service": "13.2.0",
+    "@nrwl/cli": "13.7.1",
+    "@nrwl/cypress": "13.7.1",
+    "@nrwl/eslint-plugin-nx": "13.7.1",
+    "@nrwl/jest": "13.7.1",
+    "@nrwl/js": "13.7.1",
+    "@nrwl/linter": "13.7.1",
+    "@nrwl/nx-cloud": "13.1.2",
+    "@nrwl/tao": "13.7.1",
+    "@nrwl/workspace": "13.7.1",
     "@types/jest": "27.0.2",
     "@types/node": "14.14.33",
-    "@typescript-eslint/eslint-plugin": "~5.3.0",
-    "@typescript-eslint/parser": "~5.3.0",
+    "@typescript-eslint/eslint-plugin": "5.10.2",
+    "@typescript-eslint/parser": "5.10.2",
     "cypress": "^9.1.0",
-    "eslint": "8.2.0",
+    "eslint": "8.7.0",
     "eslint-config-prettier": "8.1.0",
     "eslint-plugin-cypress": "^2.10.3",
     "jest": "27.2.3",
     "jest-preset-angular": "11.0.0",
-    "ng-packagr": "^13.0.0",
+    "ng-packagr": "13.2.1",
     "postcss": "^8.4.5",
     "postcss-import": "^14.0.2",
     "postcss-preset-env": "^6.7.0",
     "postcss-url": "^10.1.1",
-    "prettier": "^2.3.1",
+    "prettier": "2.5.1",
     "ts-jest": "27.0.5",
-    "typescript": "~4.4.3"
+    "typescript": "4.5.5"
   }
 }
+
